header and footer

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,1 +1,13 @@
-<h1>hello</h1>
+<div class="base row">
+    <div class="profile col-12">
+      <div class="photo"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/764024/profile/profile-512.jpg" /></div>
+      <div class="info">
+        <h4 class="name">Alaa Shaher</h4><small class="job">Front-end Web Develper</small>
+      </div>
+    </div>
+    <div class="about col-12">
+      <h3>About me</h3>
+      I'am Front-end Develper, have good exprince, <br />keeping learning more tool
+      
+    </div>
+  </div>
