--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -1,3 +1,133 @@
-h1 {
-    color: red;
+//colors
+$color_gun_powder_approx: #3d405b;
+$color_gallery_approx: #eee;
+$color_fuscous_gray_approx: #555;
+$color_alabaster_approx: #fbfbfb;
+$color_pink_swan_approx: #bbb;
+$color_gurkha_approx: #8d9e78;
+$color_gallery_60_approx: rgba(238, 238, 238, 0.6);
+$color_japonica_approx: #e07a5f;
+$color_celeste_approx: #cdcdcd;
+
+//fonts
+$font_0: Ubuntu;
+$font_1: 微軟正黑體;
+$font_2: sans-serif;
+
+//@extend-elements
+//original selectors
+//body, html
+%extend_1 {
+  margin: 0;
+  background: $color_gallery_approx;
+  font-family: $font_0, $font_1, $font_2;
+  letter-spacing: 0.65px;
+  font-size: 15px;
+  color: $color_fuscous_gray_approx;
+  cursor: default;
+}
+
+//original selectors
+//.resume .func .work ul li, .resume .func .edu ul li
+%extend_2 {
+  position: relative;
+  margin-left: 15px;
+  padding-left: 25px;
+  padding-bottom: 15px;
+}
+
+
+* {
+  outline: none;
+}
+
+body {
+  @extend %extend_1;
+}
+
+html {
+  @extend %extend_1;
+}
+
+a {
+  text-decoration: none;
+  color: $color_fuscous_gray_approx;
+  display: block;
+  //Instead of the line below you could use @include transition-duration($duration-1, $duration-2, $duration-3, $duration-4, $duration-5, $duration-6, $duration-7, $duration-8, $duration-9, $duration-10)
+  transition-duration: 0.3s;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+h3 {
+  color: $color_gun_powder_approx;
+  margin: 10px 0;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+.base {
+  box-sizing: border-box;
+
+  /* float: left; */
+  width: 103%;
+  height: 200px;
+  padding: 30px 15px;
+  background: $color_gallery_60_approx;
+
+  >div {
+    padding-bottom: 10px;
+
+    &:last-of-type {
+      padding-bottom: 0;
+    }
+  }
+
+  .profile {
+    background: $color_gurkha_approx;
+    padding: 30px 15px 5px;
+    margin: -30px -15px 45px;
+    position: relative;
+    z-index: 2;
+
+    .info {
+      text-align: center;
+      color: $color_alabaster_approx;
+
+      .name {
+        margin-top: 10px;
+        margin-bottom: 0;
+        font-size: 1.5em;
+        font-weight: normal;
+      }
+    }
+
+    .photo {
+      text-align: center;
+
+      img {
+        width: 17%;
+        //Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+        border-radius: 50%;
+      }
+    }
+  }
+
+  .profile::after {
+    content: "";
+    position: absolute;
+    background: $color_gurkha_approx;
+    width: 100%;
+    height: 30px;
+    bottom: -15px;
+    left: 0;
+    //Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
+    transform: skewY(-5deg);
+    z-index: -1;
+  }
+
+
 }
