--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="base row">
     <div class="profile col-12">
-      <div class="photo"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/764024/profile/profile-512.jpg" /></div>
+      <div class="photo"><img src="../../../assets/images/32556524_2112831515640928_131524216569724928_n.jpg" /></div>
       <div class="info">
         <h4 class="name">Alaa Shaher</h4><small class="job">Front-end Web Develper</small>
       </div>
     </div>
-    <div class="about col-12">
+    <div class="about col-12 text-center">
       <h3>About me</h3>
       I'am Front-end Develper, have good exprince, <br />keeping learning more tool
       
