--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <app-header></app-header>
-
+<div class="resume">
+  <div class="func">
+    <app-work-experience></app-work-experience>
+    <app-soft-skills></app-soft-skills>
+  </div>
+</div>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
