--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -2,10 +2,10 @@
   <div class="col-12">
     <div class="contact row">
       <h3 class="col-12">Contact</h3>
-      <div class="call col-lg-3"><i class="fa fa-phone"></i><span>+201024513379</span></div>
-      <div class="address col-lg-3"><i class="fa fa-map-marker"></i><span>egypt, benha</span></div>
-      <div class="email col-lg-3"><a href="mailto:alaashaher12@gmail.com" target="_blank"><i class="fa fa-envelope"></i><span>alaashaher12@gmail.com</span></a></div>
-      <div class="website col-lg-3"><a href="http://codepen.io/alaa_shaher" target="_blank"> <i
+      <div class="call col-lg-3 col-md-6 col-sm-12"><i class="fa fa-phone"></i><span>+201024513379</span></div>
+      <div class="address col-lg-3 col-md-6 col-sm-12"><i class="fa fa-map-marker"></i><span>egypt, benha</span></div>
+      <div class="email col-lg-3 col-md-6 col-sm-12"><a href="mailto:alaashaher12@gmail.com" target="_blank"><i class="fa fa-envelope"></i><span>alaashaher12@gmail.com</span></a></div>
+      <div class="website col-lg-3 col-md-6 col-sm-12"><a href="http://codepen.io/alaa_shaher" target="_blank"> <i
             class="fa fa-home"></i><span>codepen.io/alaa_shaher</span></a></div>
     </div>
     <div class="follow row">
