use template interpolation

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -2,12 +2,12 @@
     <div class="profile col-12">
       <div class="photo"><img src="../../../assets/images/32556524_2112831515640928_131524216569724928_n.jpg" /></div>
       <div class="info">
-        <h4 class="name">Alaa Shaher</h4><small class="job">Front-end Web Develper</small>
+        <h4 class="name">{{info.name}}</h4><small class="job">{{info.job}}</small>
       </div>
     </div>
     <div class="about col-12 text-center">
       <h3>About me</h3>
-      I'am Front-end Develper, have good exprince, <br />keeping learning more tool
+       {{info.about}}<br />
       
     </div>
   </div>
