--- a/src/app/pages/softSkills/softSkills.component.html
+++ b/src/app/pages/softSkills/softSkills.component.html
@@ -46,25 +46,25 @@
         <svg viewbox="0 0 100 100">
           <circle cx="50" cy="50" r="45"></circle>
           <circle class="cbar" cx="50" cy="50" r="45"></circle>
-        </svg><span>Photoshop</span><small></small>
+        </svg><span>{{skills.skill1}}</span><small></small>
       </li>
       <li data-percent="80">
         <svg viewbox="0 0 100 100">
           <circle cx="50" cy="50" r="45"></circle>
           <circle class="cbar" cx="50" cy="50" r="45"></circle>
-        </svg><span>VS Code</span><small></small>
+        </svg><span>{{skills.skill2}}</span><small></small>
       </li>
       <li data-percent="89">
         <svg viewbox="0 0 100 100">
           <circle cx="50" cy="50" r="45"></circle>
           <circle class="cbar" cx="50" cy="50" r="45"></circle>
-        </svg><span>Atom</span><small></small>
+        </svg><span>{{skills.skill3}}</span><small></small>
       </li>
       <li data-percent="55">
         <svg viewbox="0 0 100 100">
           <circle cx="50" cy="50" r="45"></circle>
           <circle class="cbar" cx="50" cy="50" r="45"></circle>
-        </svg><span>Commind Line</span><small></small>
+        </svg><span>{{skills.skill4}}</span><small></small>
       </li>
     </ul>
   </div>
