--- a/src/app/pages/workExrerience/work-experience.component.html
+++ b/src/app/pages/workExrerience/work-experience.component.html
@@ -2,16 +2,15 @@
   <div class="work col-lg-6 col-md-6 col-sm-12 col-xs-12">
     <h3><i class="fa fa-briefcase"></i>Work Exrerience</h3>
     <ul>
-      <li><span>Front-end Web Designer</span><small>Apr 2016 - Now</small></li>
-      <li><span>Design Assistant</span><small>Mar 2015 - Dec 2015</small></li>
-      <li><span>Design Assistant (Part-time)</span><small>Oct 2014 - Jul 2015</small></li>
+      <li><span>{{WorkExrerience.work1}}</span><small>{{WorkExrerience.data1}}</small></li>
+      <li><span>{{WorkExrerience.work2}}</span><small>{{WorkExrerience.data2}}</small></li>
     </ul>
   </div>
   <div class="edu col-lg-6 col-md-6 col-sm-12 col-xs-12">
     <h3><i class="fa fa-graduation-cap"></i>Education</h3>
     <ul>
-      <li><span>Department of Information Management</span><small>Set 2010 - Jun 2014</small></li>
-      <li><span>Department of Data Processing</span><small>Set 2007 - Jun 2010</small></li>
+      <li><span>{{Education.Education1}}</span><small>{{Education.data1}}</small></li>
+      <li><span>{{Education.Education2}}</span><small>{{Education.data1}}</small></li>
     </ul>
   </div>
 </div>
