--- a/src/app/pages/workExrerience/work-experience.component.html
+++ b/src/app/pages/workExrerience/work-experience.component.html
@@ -1,16 +1,21 @@
-<div class="workExperience container row func">
-  <div class="work col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h3><i class="fa fa-briefcase"></i>Work Exrerience</h3>
-    <ul>
-      <li><span>{{WorkExrerience.work1}}</span><small>{{WorkExrerience.data1}}</small></li>
-      <li><span>{{WorkExrerience.work2}}</span><small>{{WorkExrerience.data2}}</small></li>
-    </ul>
-  </div>
-  <div class="edu col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h3><i class="fa fa-graduation-cap"></i>Education</h3>
-    <ul>
-      <li><span>{{Education.Education1}}</span><small>{{Education.data1}}</small></li>
-      <li><span>{{Education.Education2}}</span><small>{{Education.data1}}</small></li>
-    </ul>
+<div class="resume">
+  <div class="func">
+    <div class="workExperience container row func">
+      <div class="work col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <h3><i class="fa fa-briefcase"></i>Work Exrerience</h3>
+        <ul>
+          <li><span>{{WorkExrerience.work1}}</span><small>{{WorkExrerience.data1}}</small></li>
+          <li><span>{{WorkExrerience.work2}}</span><small>{{WorkExrerience.data2}}</small></li>
+        </ul>
+      </div>
+      <div class="edu col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <h3><i class="fa fa-graduation-cap"></i>Education</h3>
+        <ul>
+          <li><span>{{Education.Education1}}</span><small>{{Education.data1}}</small></li>
+          <li><span>{{Education.Education2}}</span><small>{{Education.data1}}</small></li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 </div>
