--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
 <app-header></app-header>
-
-    <app-work-experience></app-work-experience>
-    <app-soft-skills></app-soft-skills>
-
-<app-footer></app-footer>
-<router-outlet></router-outlet>
+<div class="page-contain">
+    <router-outlet></router-outlet>
+</div>
