--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,24 +1,11 @@
-<!-- <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
-  <mdb-navbar-brand>
-    <a href="#" class="navbar-brand">Navbar</a>
-  </mdb-navbar-brand>
-  <links>
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link waves-light" mdbWavesEffect>Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light" mdbWavesEffect>Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light" mdbWavesEffect>Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
-      </li>
-    </ul>
-  </links>
-</mdb-navbar> -->
+<nav class="text-center">
+  <ul>
+    <a (click)="gotoLinkhome()">home</a>
+    <a (click)="gotoLinkExperience()">Experience</a>
+    <a (click)="gotoLinkSkills()">Skills</a>
+    <a (click)="gotoLinkContact()">Contact</a>
+  </ul>
+ </nav>
 <div class="base row">
   <div class="profile col-12">
     <div class="photo"><img src="../../../assets/images/32556524_2112831515640928_131524216569724928_n.jpg" /></div>
